Updating description text and url
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1603899 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/commercial.page
+++ b/src/main/webapp/index/community/commercial.page
@@ -14,7 +14,7 @@ h3. Inovex
 
 h3. Savoir Technologies, Inc
 
-[Savoir Technologies, Inc|http://www.savoirtech.com] provides enterprise consulting, [training|http://www.savoirtech.com/services/training/developer-training-for-osgi-apache-karaf] and support for Karaf and a host of other Apache service containers. Savoir can provide [best practice mentoring for developing with Karaf|http://www.savoirtech.com/services/training/developer-training-for-osgi-apache-karaf], as well as architectural/design reviews, troubleshooting and SOA infrastructure implementations.
+[Savoir Technologies, Inc|http://www.savoirtech.com] contributes and commits to the Apache Karaf project, while providing enterprise consulting, [training|http://www.savoirtech.com/services/training/developer-training-for-osgi-apache-karaf] and [support|http://support.savoirtech.com/hc/en-us] for Karaf and a host of other Apache service containers. Savoir can provide [best practice mentoring for developing with Karaf|http://www.savoirtech.com/services/training/developer-training-for-osgi-apache-karaf], as well as architectural/design reviews, troubleshooting and SOA infrastructure implementations.
 
 h3. Talend
 
