--- a/src/main/webapp/index/community/articles.page
+++ b/src/main/webapp/index/community/articles.page
@@ -6,6 +6,7 @@ page_modifier: jbonofre
 --- pipeline:conf
 h2. Articles on Apache Karaf
 
+* [Apache Karaf, Camel, ActiveMQ with Falcon for Hadoop CDC solution|http://blog.nanthrax.net/2014/03/hadoop-cdc-and-processes-notification-with-apache-falcon-apache-activemq-and-apache-camel/]
 * [Apache Karaf, Cellar, Camel, ActiveMQ monitoring with ELK (ElasticSearch, Logstash, and Kibana)|http://blog.nanthrax.net/2014/03/apache-karaf-cellar-camel-activemq-monitoring-with-elk-elasticsearch-logstash-and-kibana/]
 * [Coming in Karaf 3.0.0: new enterprise JPA (OpenJPA, Hibernate) and CDI (OpenWebBeans, JBoss Weld) features|http://blog.nanthrax.net/2013/12/coming-in-karaf-3-0-0-new-enterprise-jpa-openjpa-hibernate-and-cdi-openwebbeans-jboss-weld-features/]
 * [Coming in Karaf 3.0.0: new enterprise JDBC feature|http://blog.nanthrax.net/2013/12/coming-in-karaf-3-0-0-new-enterprise-jdbc-feature/]
@@ -44,6 +45,8 @@ h2. Articles on Apache Karaf
 h2. Presentations
 
 * [JUG Poitou Charentes - Apache, OSGi and Karaf|http://www.slideshare.net/gnodet/jug-poitou-charentes-apache-osgi-and-karaf]
+* ApacheCon EU 2012: Cellar, a clustering solution for Karaf
+* ApacheCon NA 2011: Deployment with ACE and Karaf
 * [OSGi with Apache Felix Karaf|http://www.anova.be/files/OSGi%20with%20Apache%20Felix%20Karaf.pdf]
 * [Apache Karaf OSGi runtime in action (video)|http://www.dzone.com/links/video_apache_karaf_demo_osgi_runtime_in_action.html]
 
