Add Cellar 3.0.0 release
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1606064 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/news.page
+++ b/src/main/webapp/index/community/news.page
@@ -5,6 +5,7 @@ page_creator: gnodet
 page_modifier: jbonofre
 --- pipeline:conf
 h2. News
+{include:news-2014-06-27}
 {include:news-2014-06-20}
 {include:news-2014-04-13}
 {include:news-2014-02-17}
