--- a/src/main/webapp/index/community/releases-schedule.page
+++ b/src/main/webapp/index/community/releases-schedule.page
@@ -24,7 +24,7 @@ h2. Cellar
 || Release Branch || Karaf || Status || Latest Version || Next Version || ETA ||
 | cellar-2.2.x | 2.2.x | EOL/NotActive | 2.2.6 | | |
 | cellar-2.3.x | 2.3.x | Previous Stable/In Maintenance | 2.3.2 | 2.3.3 | 2014/08/15 |
-| master (3.0.x) | 3.0.x | Current Stable/In Maintenance | | 3.0.0 | 2014/06/23 |
+| master (3.0.x) | 3.0.x | Current Stable/In Maintenance | 3.0.0 | 3.0.1 | 2014/08/23 |
 
 h2. Cave
 
