--- a/src/main/webapp/index/subprojects/cellar.page
+++ b/src/main/webapp/index/subprojects/cellar.page
@@ -1,6 +1,6 @@
 ---
 title: Cellar
-page_version: 8
+page_version: 9
 page_creator: jbonofre
 page_modifier: jbonofre
 --- pipeline:conf
@@ -25,8 +25,8 @@ h2. Quick Start
 To install and start Cellar into your running Karaf instance, you have to install the Cellar feature:
 
 {code}
-karaf@root> feature:add-url mvn:org.apache.karaf.cellar/apache-karaf-cellar/2.3.2/xml/features
-karaf@root> feature:install cellar
+karaf@root()> feature:repo-add mvn:org.apache.karaf.cellar/apache-karaf-cellar/3.0.0/xml/features
+karaf@root()> feature:install cellar
 {code}
 
 You're ready to use Cellar clustering. Take a look on the user guide.
