--- a/src/main/webapp/index/community/releases-schedule.page
+++ b/src/main/webapp/index/community/releases-schedule.page
@@ -9,15 +9,15 @@ h1. Releases Schedule
 
 h2. Karaf
 
-|| Release Branch || OSGi || Status || Latest Version || Next Version || ETA ||
-| karaf-1.x | | EOL/NotActive | | | |
-| karaf-2.0.x | | EOL/NotActive | 2.0.0 | | |
-| karaf-2.1.x | | EOL/NotActive | 2.1.6 | | |
-| karaf-2.2.x | 4.2 | EOL/NotActive | 2.2.9 | | |
-| karaf-2.3.x | 4.3 | Previous Stable/In Maintenance | 2.3.5 | 2.3.6 | 2014/06/27 |
-| karaf-2.4.x | 5 |Transition Stable between 2.3.x and 3.0.x/In Maintenance | | 2.4.0 | 2014/07/20 |
-| karaf-3.0.x | 4.3/5 |Current Stable/In Maintenance | 3.0.1 | 3.0.2 | 2014/07/24 |
-| master (4.0.x) | 5/6 | Development | | | |
+|| Release Branch || OSGi || Java || Status || Latest Version || Next Version || ETA ||
+| karaf-1.x | | | EOL/NotActive | | | |
+| karaf-2.0.x | | | EOL/NotActive | 2.0.0 | | |
+| karaf-2.1.x | | | EOL/NotActive | 2.1.6 | | |
+| karaf-2.2.x | 4.2 | 5 / 6 | EOL/NotActive | 2.2.9 | | |
+| karaf-2.3.x | 4.3 | 5 / 6 / 7 | Previous Stable/In Maintenance | 2.3.5 | 2.3.6 | 2014/06/27 |
+| karaf-2.4.x | 5 | 7 / 8 | Transition Stable between 2.3.x and 3.0.x/In Maintenance | | 2.4.0 | 2014/07/20 |
+| karaf-3.0.x | 4.3 (partial 5 support) | 6 / 7 / 8 (starting from 3.0.2) | Current Stable/In Maintenance | 3.0.1 | 3.0.2 | 2014/07/24 |
+| master (4.0.x) | 5 | 7 / 8 | Development | | | |
 
 h2. Cellar
 
