--- a/src/main/webapp/index/community/news.page
+++ b/src/main/webapp/index/community/news.page
@@ -1,10 +1,11 @@
 ---
 title: News
-page_version: 11
+page_version: 12
 page_creator: gnodet
 page_modifier: jbonofre
 --- pipeline:conf
 h2. News
+{include:news-2014-07-04}
 {include:news-2014-06-27}
 {include:news-2014-06-20}
 {include:news-2014-04-13}
