Update release schedule page
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1608164 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/releases-schedule.page
+++ b/src/main/webapp/index/community/releases-schedule.page
@@ -30,4 +30,4 @@ h2. Cave
 
 || Release Branch || Karaf || Status || Latest Version || Next Version || ETA ||
 | cave-2.x | 2.3.x | Previous Stable/In Maintenance | 2.3.0 | 2.3.1 | 2014/08/30 |
-| master (3.0.x) | 3.0.x | Current Stable/In Maintenance | | 3.0.0 | 2014/06/25 |
+| master (3.0.x) | 3.0.x | Current Stable/In Maintenance | 3.0.0 | 3.0.1 | 2014/08/25 |
