--- a/src/main/webapp/index/community/releases-schedule.page
+++ b/src/main/webapp/index/community/releases-schedule.page
@@ -14,9 +14,9 @@ h2. Karaf
 | karaf-2.0.x | | | EOL/NotActive | 2.0.0 | | |
 | karaf-2.1.x | | | EOL/NotActive | 2.1.6 | | |
 | karaf-2.2.x | 4.2 | 5 / 6 | EOL/NotActive | 2.2.9 | | |
-| karaf-2.3.x | 4.3 | 5 / 6 / 7 | Previous Stable/In Maintenance | 2.3.6 | 2.3.7 | TBD |
-| karaf-2.4.x | 5 | 7 / 8 | Transition Stable between 2.3.x and 3.0.x/In Maintenance | | 2.4.0 | 2014/07/25 |
-| karaf-3.0.x | 4.3 (partial 5 support) | 6 / 7 / 8 (starting from 3.0.2) | Current Stable/In Maintenance | 3.0.1 | 3.0.2 | 2014/07/25 |
+| karaf-2.3.x | 4.3 | 5 / 6 / 7 | Previous Stable/In Maintenance | 2.3.6 | 2.3.7 | 2014/09/15 |
+| karaf-2.4.x | 5 | 7 / 8 | Transition Stable between 2.3.x and 3.0.x/In Maintenance | | 2.4.0 | 2014/08/25 |
+| karaf-3.0.x | 4.3 (partial 5 support) | 6 / 7 / 8 (starting from 3.0.2) | Current Stable/In Maintenance | 3.0.1 | 3.0.2 | 2014/08/25 |
 | master (4.0.x) | 5 | 7 / 8 | Development | | | |
 
 h2. Cellar
