--- a/src/main/webapp/index.page
+++ b/src/main/webapp/index.page
@@ -16,8 +16,8 @@ Here is a short list of features supported by the Karaf:
 {column}
 {center}
 *[Download Karaf 3.0.1|index/community/download.html#Karaf3.0.1]*
-*[Download Karaf 2.3.6|index/community/download.html#Karaf2.3.6]*
-[!/images/karaf-box.png|width=256!|index/community/download.html#Karaf2.3.6]
+*[Download Karaf 2.3.7|index/community/download.html#Karaf2.3.7]*
+[!/images/karaf-box.png|width=256!|index/community/download.html#Karaf2.3.7]
 {center}
 {html}
 <script src="http://widgets.twimg.com/j/2/widget.js"></script>
@@ -60,6 +60,7 @@ new TWTR.Widget({
 
 
 h2. News
+{include:news-2014-09-06}
 {include:news-2014-08-01}
 {include:news-2014-07-04}
 {include:news-2014-06-27}
