[KARAF-3225] Release Apache Karaf 2.3.8. update website
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1626208 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/news.page
+++ b/src/main/webapp/index/community/news.page
@@ -5,6 +5,7 @@ page_creator: gnodet
 page_modifier: jbonofre
 --- pipeline:conf
 h2. News
+{include:news-2014-09-19}
 {include:news-2014-09-06}
 {include:news-2014-08-01}
 {include:news-2014-07-04}
