--- a/src/main/webapp/index/documentation.page
+++ b/src/main/webapp/index/documentation.page
@@ -10,6 +10,10 @@ h2. Karaf 3.0.x manual
 
 * [Karaf 3.0.0 Manual|http://karaf.apache.org/manual/latest/index.html]
 
+h2. Karaf 2.4.x manual
+
+* [Karaf 2.4.0 Manual|http://karaf.apache.org/manual/latest-2.4.x/index.html]
+
 h2. Karaf 2.3.x manual
 
 * [Karaf 2.3.6 Manual|http://karaf.apache.org/manual/latest-2.3.x/index.html]
