--- a/src/main/webapp/index.page
+++ b/src/main/webapp/index.page
@@ -16,7 +16,7 @@ Here is a short list of features supported by the Karaf:
 {column}
 {center}
 *[Download Karaf 3.0.1|index/community/download.html#Karaf3.0.1]*
-*[Download Karaf 2.4.0|index/community/download.html#Karaf2.4.0]*^M
+*[Download Karaf 2.4.0|index/community/download.html#Karaf2.4.0]*
 *[Download Karaf 2.3.8|index/community/download.html#Karaf2.3.8]*
 [!/images/karaf-box.png|width=256!|index/community/download.html#Karaf3.0.1]
 {center}
