--- a/src/main/webapp/index/community/releases-schedule.page
+++ b/src/main/webapp/index/community/releases-schedule.page
@@ -14,20 +14,20 @@ h2. Karaf
 | karaf-2.0.x | | | EOL/NotActive | 2.0.0 | | |
 | karaf-2.1.x | | | EOL/NotActive | 2.1.6 | | |
 | karaf-2.2.x | 4.2 | 5 / 6 | EOL/NotActive | 2.2.9 | | |
-| karaf-2.3.x | 4.3 | 5 / 6 / 7 | Previous Stable/In Maintenance | 2.3.6 | 2.3.7 | 2014/09/15 |
-| karaf-2.4.x | 5 | 7 / 8 | Transition Stable between 2.3.x and 3.0.x/In Maintenance | | 2.4.0 | 2014/08/29 |
-| karaf-3.0.x | 4.3 (partial 5 support) | 6 / 7 / 8 (starting from 3.0.2) | Current Stable/In Maintenance | 3.0.1 | 3.0.2 | 2014/08/29 |
-| master (4.0.x) | 5 | 7 / 8 | Development | | | |
+| karaf-2.3.x | 4.3 | 5 / 6 / 7 | Previous Stable/In Maintenance | 2.3.8 | 2.3.9 | 2014/10/15 |
+| karaf-2.4.x | 5 | 7 / 8 | Transition Stable between 2.3.x and 3.0.x/In Maintenance | 2.4.0 | 2.4.1 | 2014/10/29 |
+| karaf-3.0.x | 4.3 (partial 5 support) | 6 / 7 / 8 (starting from 3.0.2) | Current Stable/In Maintenance | 3.0.1 | 3.0.2 | 2014/09/28 |
+| master (4.0.x) | 5 | 7 / 8 | Development | | 4.0.0.M1 | 2014/09/28 |
 
 h2. Cellar
 
 || Release Branch || Karaf || Status || Latest Version || Next Version || ETA ||
 | cellar-2.2.x | 2.2.x | EOL/NotActive | 2.2.6 | | |
-| cellar-2.3.x | 2.3.x | Previous Stable/In Maintenance | 2.3.2 | 2.3.3 | 2014/09/15 |
-| master (3.0.x) | 3.0.x | Current Stable/In Maintenance | 3.0.0 | 3.0.1 | 2014/09/23 |
+| cellar-2.3.x | 2.3.x | Previous Stable/In Maintenance | 2.3.2 | 2.3.3 | 2014/10/15 |
+| master (3.0.x) | 3.0.x | Current Stable/In Maintenance | 3.0.0 | 3.0.1 | 2014/10/23 |
 
 h2. Cave
 
 || Release Branch || Karaf || Status || Latest Version || Next Version || ETA ||
-| cave-2.x | 2.3.x | Previous Stable/In Maintenance | 2.3.0 | 2.3.1 | 2014/09/30 |
-| master (3.0.x) | 3.0.x | Current Stable/In Maintenance | 3.0.0 | 3.0.1 | 2014/09/25 |
+| cave-2.x | 2.3.x | Previous Stable/In Maintenance | 2.3.0 | 2.3.1 | 2014/10/30 |
+| master (3.0.x) | 3.0.x | Current Stable/In Maintenance | 3.0.0 | 3.0.1 | 2014/10/25 |
