--- a/src/main/webapp/site/navigation.page
+++ b/src/main/webapp/site/navigation.page
@@ -29,10 +29,10 @@ h3. Releases
 -- [Overview|]
 -- [Quickstart|]
 -- [Dependencies Matrix|http://karaf.apache.org/index/documentation/karaf-dependencies/karaf-deps-2.4.x.html]
--- Manual ([HTML|]|[PDF|http://repo1.maven.org/maven2/org/apache/karaf/manual/2.4.0/manual-2.4.0.pdf])
---- [User Guide|]
---- [Developer Guide|]
---- [Commands reference|]
+-- Manual ([HTML|http://karaf.apache.org/manual/latest-2.x/index.html]|[PDF|http://repo1.maven.org/maven2/org/apache/karaf/manual/2.4.0/manual-2.4.0.pdf])
+--- [User Guide|http://karaf.apache.org/manual/latest-2.x/users-guide/index.html]
+--- [Developer Guide|http://karaf.apache.org/manual/latest-2.x/developers-guide/index.html]
+--- [Commands reference|http://karaf.apache.org/manual/latest-2.x/commands/commands.html]
 
 - 2.3.x
 -- [Overview|http://karaf.apache.org/manual/latest-2.3.x/overview.html]
