--- a/src/main/webapp/snippets/karaf-features.page
+++ b/src/main/webapp/snippets/karaf-features.page
@@ -12,6 +12,7 @@ page_modifier: gnodet
 * *Remote access*: use any SSH client to connect to Karaf and issue commands in the console
 * *Security framework* based on JAAS
 * *Managing instances*: Karaf provides simple commands for managing multiple instances. You can easily create, delete, start and stop instances of Karaf through the console.
+* Karaf 4.0.x branch Supports the latest OSGi 5.0 containers: Apache Felix Framework 4.4 and Eclipse Equinox 3.9
 * Karaf 3.0.x branch Supports the latest OSGi 4.3 containers: Apache Felix Framework 4.0 and Eclipse Equinox 3.8
 * Karaf 2.4.x branch Supports the latest OSGi 5.0 containers: Apache Felix Framework 4.4 and Eclipse Equinox 3.9
 * Karaf 2.3.x branch Supports the latest OSGi 4.3 containers: Apache Felix Framework 4.0 and Eclipse Equinox 3.8
