--- a/src/main/webapp/index.page
+++ b/src/main/webapp/index.page
@@ -15,7 +15,7 @@ Here is a short list of features supported by the Karaf:
 {column}
 {column}
 {center}
-*[Download Karaf 4.0.0.M1|index/community/download/html#Karaf4.0.0.M1]*
+*[Download Karaf 4.0.0.M1|index/community/download.html#Karaf4.0.0.M1]*
 *[Download Karaf 3.0.2|index/community/download.html#Karaf3.0.2]*
 *[Download Karaf 2.4.0|index/community/download.html#Karaf2.4.0]*
 *[Download Karaf 2.3.8|index/community/download.html#Karaf2.3.8]*
