--- a/src/main/webapp/index/community/news.page
+++ b/src/main/webapp/index/community/news.page
@@ -5,6 +5,7 @@ page_creator: gnodet
 page_modifier: jbonofre
 --- pipeline:conf
 h2. News
+{include:news-2014-11-09}
 {include:news-2014-10-14}
 {include:news-2014-10-13}
 {include:news-2014-09-20}
