--- a/src/main/webapp/index/subprojects/cellar/cellar-download.page
+++ b/src/main/webapp/index/subprojects/cellar/cellar-download.page
@@ -22,6 +22,7 @@ The latest release is [Karaf Cellar 3.0.0 Release|download/karaf-cellar-3.0.0-re
 
 Releases:
 * [#Karaf Cellar 3.0.0]
+* [#Karaf Cellar 2.3.3]
 * [#Karaf Cellar 2.3.2]
 * [#Karaf Cellar 2.3.1]
 * [#Karaf Cellar 2.3.0]
@@ -61,6 +62,27 @@ h3. Source Distribution
 ||Description||Download Link|| || || ||
 |Windows Source Distribution| [apache-karaf-cellar-3.0.0-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/cellar/3.0.0/apache-karaf-cellar-3.0.0-src.zip]|[PGP|http://www.apache.org/dist/karaf/cellar/3.0.0/apache-karaf-cellar-3.0.0-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/cellar/3.0.0/apache-karaf-cellar-3.0.0-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/cellar/3.0.0/apache-karaf-cellar-3.0.0-src.zip.md5]|
 |Unix/Linux/Cygwin Source Distribution| [apache-karaf-cellar-3.0.0-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/cellar/3.0.0/apache-karaf-cellar-3.0.0-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/cellar/3.0.0/apache-karaf-cellar-3.0.0-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/cellar/3.0.0/apache-karaf-cellar-3.0.0-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/cellar/3.0.0/apache-karaf-cellar-3.0.0-src.tar.gz.md5]|
+
+h2. Karaf Cellar 2.3.3
+
+[Release Notes|download/karaf-cellar-2.3.3-release.html]
+
+h3. Direct Installation
+
+Simply install the Karaf Cellar feature into your running Karaf 2.3.x instance:
+
+{code}
+karaf@root> features:addurl mvn:org.apache.karaf.cellar/apache-karaf-cellar/2.3.3/xml/features
+karaf@root> features:install cellar
+{code}
+
+You're ready to use Karaf Cellar clustering.
+
+h3. Source Distribution
+
+||Description||Download Link|| || || ||
+|Windows Source Distribution| [apache-karaf-cellar-2.3.3-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/cellar/2.3.3/apache-karaf-cellar-2.3.3-src.zip]|[PGP|http://www.apache.org/dist/karaf/cellar/2.3.3/apache-karaf-cellar-2.3.3-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/cellar/2.3.3/apache-karaf-cellar-2.3.3-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/cellar/2.3.3/apache-karaf-cellar-2.3.3-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-cellar-2.3.3-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/cellar/2.3.3/apache-karaf-cellar-2.3.3-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/cellar/2.3.3/apache-karaf-cellar-2.3.3-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/cellar/2.3.3/apache-karaf-cellar-2.3.3-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/cellar/2.3.3/apache-karaf-cellar-2.3.3-src.tar.gz.md5]|
 
 h2. Karaf Cellar 2.3.2
 
