--- a/src/main/webapp/index/community/releases-schedule.page
+++ b/src/main/webapp/index/community/releases-schedule.page
@@ -19,7 +19,7 @@ h2. Karaf
 | karaf-2.3.x | 4.3 | 5 / 6 / 7 | Previous Stable/In Maintenance | 2.3.9 | 2.3.10 | 2015/01/19 |
 | karaf-2.4.x | 5 | 7 / 8 | Transition Stable between 2.3.x and 3.0.x/In Maintenance | 2.4.0 | 2.4.1 | 2014/12/22 |
 | karaf-3.0.x | 4.3 (partial 5 support) | 6 / 7 / 8 | Current Stable/In Maintenance | 3.0.2 | 3.0.3 | 2014/12/29 |
-| master (4.0.x) | 5 | 7 / 8 | Development | | 4.0.0.M1 | 2015/01/15 |
+| master (4.0.x) | 5 | 7 / 8 | Development | 4.0.0.M1 | 4.0.0.M2 | 2015/01/15 |
 
 h2. Cellar
 
