--- a/src/main/webapp/index/community/news/news-2015-01-02.page
+++ b/src/main/webapp/index/community/news/news-2015-01-02.page
@@ -3,7 +3,7 @@ page_version: 2
 page_creator: jgoodyear 
 page_modifier: jgoodyear
 --- pipeline:conf
-h1. Jamie Goodyear posted on January 2, 2015\\Karaf 2.4.1 released!
+h1. The Apache Karaf Team posted on January 2, 2015\\Karaf 2.4.1 released!
 
 The Karaf team is pleased to announce the availability of [Karaf 2.4.1|index/community/download/karaf-2.4.1-release.html].
 
