Add Cellar 2.3.4 and 3.0.1 releases
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1654146 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/news.page
+++ b/src/main/webapp/index/community/news.page
@@ -1,10 +1,11 @@
 ---
 title: News
-page_version: 12
+page_version: 13
 page_creator: gnodet
 page_modifier: jbonofre
 --- pipeline:conf
 h2. News
+{include:news-2015-01-23}
 {include:news-2015-01-02}
 {include:news-2014-11-09}
 {include:news-2014-10-14}
