--- a/src/main/webapp/index/community/download/archives.page
+++ b/src/main/webapp/index/community/download/archives.page
@@ -114,6 +114,27 @@ h3. Manual
 |HTML Manual| [manual-2.4.0.html|http://repo1.maven.org/maven2/org/apache/karaf/manual/2.4.0/manual-2.4.0.html] |
 |PDF Manual| [manual-2.4.0.pdf|http://repo1.maven.org/maven2/org/apache/karaf/manual/2.4.0/manual-2.4.0.pdf] |
 
+h2. Karaf 2.3.9
+
+[Release Notes|download/karaf-2.3.9-release.html]
+
+h3. Binary Distribution
+
+||Description||Download Link|| || || ||
+|Windows Distribution| [apache-karaf-2.3.9.zip|http://archive.apache.org/dist/karaf/2.3.9/apache-karaf-2.3.9.zip]|[PGP|http://archive.apache.org/dist/karaf/2.3.9/apache-karaf-2.3.9.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.3.9/apache-karaf-2.3.9.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.3.9/apache-karaf-2.3.9.zip.md5]|
+|Unix/Linux/Cygwin Distribution| [apache-karaf-2.3.9.tar.gz|http://archive.apache.org/dist/karaf/2.3.9/apache-karaf-2.3.9.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/2.3.9/apache-karaf-2.3.9.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.3.9/apache-karaf-2.3.9.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.3.9-apache-karaf-2.3.9.tar.gz.md5]|
+
+h3. Source Distribution
+
+||Description||Download Link|| || || ||
+|Windows Source Distribution| [apache-karaf-2.3.9-src.zip|http://archive.apache.org/dist/karaf/2.3.9/apache-karaf-2.3.9-src.zip]|[PGP|http://archive.apache.org/dist/karaf/2.3.9/apache-karaf-2.3.9-src.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.3.9/apache-karaf-2.3.9-src.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.3.9/apache-karaf-2.3.9-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.3.9-src.tar.gz|http://archive.apache.org/dyn/closer.cgi/karaf/2.3.9/apache-karaf-2.3.9-src.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/2.3.9/apache-karaf-2.3.9-src.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.3.9/apache-karaf-2.3.9-src.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.3.9/apache-karaf-2.3.9-src.tar.gz.md5]|
+
+h3. Manual
+||Description||Download Link||
+|HTML Manual| [manual-2.3.9.html|http://repo1.maven.org/maven2/org/apache/karaf/manual/2.3.9/manual-2.3.9.html] |
+|PDF Manual| [manual-2.3.9.pdf|http://repo1.maven.org/maven2/org/apache/karaf/manual/2.3.9/manual-2.3.9.pdf] |
+
 h2. Karaf 2.3.8
 
 [Release Notes|download/karaf-2.3.8-release.html]
