--- a/src/main/webapp/index/community/releases-schedule.page
+++ b/src/main/webapp/index/community/releases-schedule.page
@@ -16,17 +16,17 @@ h2. Karaf
 | karaf-2.0.x | | | EOL/NotActive | 2.0.0 | | |
 | karaf-2.1.x | | | EOL/NotActive | 2.1.6 | | |
 | karaf-2.2.x | 4.2 | 5 / 6 | EOL/NotActive | 2.2.9 | | |
-| karaf-2.3.x | 4.3 | 5 / 6 / 7 | Previous Stable/In Maintenance | 2.3.10 | 2.3.11 | 2015/03/03 |
-| karaf-2.4.x | 5 | 7 / 8 | Transition Stable between 2.3.x and 3.0.x/In Maintenance | 2.4.0 | 2.4.1 | 2015/02/09 |
-| karaf-3.0.x | 4.3 (partial 5 support) | 6 / 7 / 8 | Current Stable/In Maintenance | 3.0.3 | 3.0.4 | 2015/03/06 |
-| master (4.0.x) | 5 | 7 / 8 | Development | 4.0.0.M1 | 4.0.0.M2 | 2015/02/11 |
+| karaf-2.3.x | 4.3 | 5 / 6 / 7 | Previous Stable/In Maintenance | 2.3.10 | 2.3.11 | 2015/03/07 |
+| karaf-2.4.x | 5 | 7 / 8 | Transition Stable between 2.3.x and 3.0.x/In Maintenance | 2.4.1 | 2.4.2 | 2015/03/14 |
+| karaf-3.0.x | 4.3 (partial 5 support) | 6 / 7 / 8 | Current Stable/In Maintenance | 3.0.3 | 3.0.4 | 2015/03/21 |
+| master (4.0.x) | 5 | 7 / 8 | Development | 4.0.0.M2 | 4.0.0 | 2015/04/04 |
 
 h2. Cellar
 
 || Release Branch || Karaf || Status || Latest Version || Next Version || ETA ||
 | cellar-2.2.x | 2.2.x | EOL/NotActive | 2.2.6 | | |
-| cellar-2.3.x | 2.3.x | Previous Stable/In Maintenance | 2.3.4 | 2.3.5 | 2015/02/28 |
-| master (3.0.x) | 3.0.x | Current Stable/In Maintenance | 3.0.1 | 3.0.2 | 2014/02/28 |
+| cellar-2.3.x | 2.3.x | Previous Stable/In Maintenance | 2.3.4 | 2.3.5 | 2015/03/05 |
+| master (3.0.x) | 3.0.x | Current Stable/In Maintenance | 3.0.1 | 3.0.2 | 2014/03/05 |
 
 h2. Cave
 
