--- a/src/main/webapp/index/community/releases-schedule.page
+++ b/src/main/webapp/index/community/releases-schedule.page
@@ -25,8 +25,9 @@ h2. Cellar
 
 || Release Branch || Karaf || Status || Latest Version || Next Version || ETA ||
 | cellar-2.2.x | 2.2.x | EOL/NotActive | 2.2.6 | | |
-| cellar-2.3.x | 2.3.x | Previous Stable/In Maintenance | 2.3.4 | 2.3.5 | 2015/03/05 |
-| master (3.0.x) | 3.0.x | Current Stable/In Maintenance | 3.0.1 | 3.0.2 | 2014/03/05 |
+| cellar-2.3.x | 2.3.x | Previous Stable/In Maintenance | 2.3.4 | 2.3.5 | 2015/03/11 |
+| cellar-3.0.x | 3.0.x | Current Stable/In Maintenance | 3.0.1 | 3.0.2 | 2014/03/11 |
+| master (4.0.x) | 4.0.x | Development | | 4.0.0 | |
 
 h2. Cave
 
