Add Cellar 2.3.5 and 3.0.2 releases
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1669562 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/subprojects/cellar/cellar-download.page
+++ b/src/main/webapp/index/subprojects/cellar/cellar-download.page
@@ -1,6 +1,6 @@
 ---
 title: Cellar Download
-page_version: 6
+page_version: 8
 page_creator: jbonofre
 page_modifier: jbonofre
 --- pipeline:conf
@@ -19,12 +19,14 @@ h2. Latest Releases
 Grab these releases while they are hot!
 
 The latest release is:
-* for Karaf 3.x: [Karaf Cellar 3.0.1 Release|download/karaf-cellar-3.0.1-release.html].
-* for Karaf 2.x: [Karaf Cellar 2.3.4 Release|download/karaf-cellar-2.3.4-release.html].
+* for Karaf 3.x: [Karaf Cellar 3.0.2 Release|download/karaf-cellar-3.0.2-release.html].
+* for Karaf 2.x: [Karaf Cellar 2.3.5 Release|download/karaf-cellar-2.3.5-release.html].
 
 Releases:
+* [#Karaf Cellar 3.0.2]
 * [#Karaf Cellar 3.0.1]
 * [#Karaf Cellar 3.0.0]
+* [#Karaf Cellar 2.3.5]
 * [#Karaf Cellar 2.3.4]
 * [#Karaf Cellar 2.3.3]
 * [#Karaf Cellar 2.3.2]
@@ -45,6 +47,28 @@ h2. Getting the latest distributions
 {info:title=The URLs below use redirection}
 The above URLs use the Apache Mirror system to redirect you to a suitable mirror for your download. Some users have experienced issues with some versions of browsers (e.g. some Safari browsers). If the download doesn't seem to work for you from the above URL then try using [Mozilla Firefox|http://www.mozilla.com/en-US/firefox/]
 {info}
+
+h2. Karaf Cellar 3.0.2 (Karaf 3.0.x)
+
+[Release Notes|download/karaf-cellar-3.0.2-release.html]
+
+h3. Direct Installation
+
+Simply install the Karaf Cellar feature into your running Karaf 3.0.x instance:
+
+{code}
+karaf@root()> feature:repo-add mvn:org.apache.karaf.cellar/apache-karaf-cellar/3.0.2/xml/features
+karaf@root()> feature:install cellar
+{code}
+
+You're ready to use Karaf Cellar clustering.
+
+h3. Source Distribution
+
+||Description||Download Link|| || || ||
+|Windows Source Distribution| [apache-karaf-cellar-3.0.2-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/cellar/3.0.2/apache-karaf-cellar-3.0.2-src.zip]|[PGP|http://www.apache.org/dist/karaf/cellar/3.0.2/apache-karaf-cellar-3.0.2-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/cellar/3.0.2/apache-karaf-cellar-3.0.2-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/cellar/3.0.2/apache-karaf-cellar-3.0.2-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-cellar-3.0.2-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/cellar/3.0.2/apache-karaf-cellar-3.0.2-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/cellar/3.0.2/apache-karaf-cellar-3.0.2-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/cellar/3.0.2/apache-karaf-cellar-3.0.2-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/cellar/3.0.2/apache-karaf-cellar-3.0.2-src.tar.gz.md5]|
+
 
 h2. Karaf Cellar 3.0.1 (Karaf 3.0.x)
 
@@ -87,6 +111,27 @@ h3. Source Distribution
 ||Description||Download Link|| || || ||
 |Windows Source Distribution| [apache-karaf-cellar-3.0.0-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/cellar/3.0.0/apache-karaf-cellar-3.0.0-src.zip]|[PGP|http://www.apache.org/dist/karaf/cellar/3.0.0/apache-karaf-cellar-3.0.0-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/cellar/3.0.0/apache-karaf-cellar-3.0.0-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/cellar/3.0.0/apache-karaf-cellar-3.0.0-src.zip.md5]|
 |Unix/Linux/Cygwin Source Distribution| [apache-karaf-cellar-3.0.0-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/cellar/3.0.0/apache-karaf-cellar-3.0.0-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/cellar/3.0.0/apache-karaf-cellar-3.0.0-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/cellar/3.0.0/apache-karaf-cellar-3.0.0-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/cellar/3.0.0/apache-karaf-cellar-3.0.0-src.tar.gz.md5]|
+
+h2. Karaf Cellar 2.3.5
+
+[Release Notes|download/karaf-cellar-2.3.5-release.html]
+
+h3. Direct Installation
+
+Simply install the Karaf Cellar feature into your running Karaf 2.3.x instance:
+
+{code}
+karaf@root> features:addurl mvn:org.apache.karaf.cellar/apache-karaf-cellar/2.3.5/xml/features
+karaf@root> features:install cellar
+{code}
+
+You're ready to use Karaf Cellar clustering.
+
+h3. Source Distribution
+
+||Description||Download Link|| || || ||
+|Windows Source Distribution| [apache-karaf-cellar-2.3.5-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/cellar/2.3.5/apache-karaf-cellar-2.3.5-src.zip]|[PGP|http://www.apache.org/dist/karaf/cellar/2.3.5/apache-karaf-cellar-2.3.5-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/cellar/2.3.5/apache-karaf-cellar-2.3.5-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/cellar/2.3.5/apache-karaf-cellar-2.3.5-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-cellar-2.3.5-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/cellar/2.3.5/apache-karaf-cellar-2.3.5-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/cellar/2.3.5/apache-karaf-cellar-2.3.5-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/cellar/2.3.5/apache-karaf-cellar-2.3.5-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/cellar/2.3.5/apache-karaf-cellar-2.3.5-src.tar.gz.md5]|
 
 h2. Karaf Cellar 2.3.4
 
