--- a/src/main/webapp/index/community/news.page
+++ b/src/main/webapp/index/community/news.page
@@ -1,10 +1,11 @@
 ---
 title: News
-page_version: 13
+page_version: 14
 page_creator: gnodet
 page_modifier: jbonofre
 --- pipeline:conf
 h2. News
+{include:news-2015-03-27}
 {include:news-2015-02-13}
 {include:news-2015-02-06}
 {include:news-2015-01-30}
