[KARAF-3647] Release APache Karaf 2.3.11
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1672915 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/news.page
+++ b/src/main/webapp/index/community/news.page
@@ -5,6 +5,7 @@ page_creator: gnodet
 page_modifier: jbonofre
 --- pipeline:conf
 h2. News
+{include:news-2015-04-11}
 {include:news-2015-03-27}
 {include:news-2015-02-13}
 {include:news-2015-02-06}
