[KARAF-3763] Release Apache karaf 4.0.0.M3
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1684296 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/news.page
+++ b/src/main/webapp/index/community/news.page
@@ -5,6 +5,7 @@ page_creator: gnodet
 page_modifier: jbonofre
 --- pipeline:conf
 h2. News
+{include:news-2015-06-08}
 {include:news-2015-05-12}
 {include:news-2015-04-25}
 {include:news-2015-04-11}
